--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "cv",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://oleksandrb93.github.io/portfolio/",
+  "homepage": "https://OleksandrB93.github.io/portfolio/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "gh-pages -d .next",
+    "deploy": "gh-pages -d build",
     "predeploy": "npm run build"
   },
   "dependencies": {
