--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-particles": "^2.12.2",
     "react-spinners": "^0.13.8",
     "react-type-animation": "^3.1.0",
+    "swiper": "^10.3.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
